test/lit/pto/tstore_fp_invalid_dtype.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 %s --emit-c --tile-op-expand 2>&1 | FileCheck %s

// Test TSTORE_FP invalid dtype combination - should fail because ACC must be f32
// NOTE: pto.tstore_fp DSL surface not yet supported, this test is pending

module attributes {pto.target_arch = "a5"} {
  func.func @tstore_fp_invalid_dtype(%src_acc: !pto.ptr<f16, l0c>, %fp_scale: !pto.ptr<f16, scaling>, %dst_gm: !pto.ptr<f16, gm>) attributes {pto.kernel_kind = #pto.kernel_kind<cube>, pto.aicore} {
    %c0 = arith.constant 0 : i64

    // This should fail - ACC with f16 is not supported for TSTORE_FP (requires f32)
    %acc_tile = pto.alloc_tile addr = %c0 : !pto.tile_buf<acc, 16x32xf16, blayout=col_major, slayout=row_major, fractal=512>

    %acc_ptr = pto.tile_buf_addr %acc_tile : !pto.tile_buf<acc, 16x32xf16, blayout=col_major, slayout=row_major, fractal=512> -> !pto.ptr<f16, l0c>

    // This should NOT match TSTORE_FP template because ACC dtype is not f32
    pto.tstore_fp %acc_ptr, %fp_scale, %dst_gm, nz2nd
      : !pto.ptr<f16, l0c>, !pto.ptr<f16, scaling>, !pto.ptr<f16, gm>, nz2nd_mode

    pto.barrier #pto.pipe<PIPE_ALL>
    return
  }
}

// CHECK: error: no matching template for pto.tstore_fp
// CHECK-SAME: dtype constraint